fixed sidebar and dropdown-menu overlapping issue

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -107,16 +107,18 @@
 
 @media screen and (max-width: 768px) {
   .containerSB {
-    width: 100%;
     height: 4rem;
     border: none;
     box-shadow: 0;
     transition: height 0.3s ease;
+    box-shadow: none;
+    background-color: transparent;
   }
   .containerSB.open {
     width: 100%;
     height: auto;
     flex-direction: column;
+    background-color: #ffffff;
   }
   .containerSB.open .sidebar-icon {
     display: block;
